<resources>

    <string name="app_name">AI</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">智能家居</string>
    <string name="menu_manage">管理</string>
    <string name="menu_control">控制</string>
    <string name="menu_camera">监控</string>
    <string name="menu_location">定位</string>
    <string name="login">登陆</string>
    <string name="username">用户名：</string>
    <string name="password">密　码：</string>
    <string name="remeber_password">记住密码</string>
    <string name="ip_address">主机IP：</string>
    <string name="user_type">类　型：</string>
    <string name="user_list">用户列表</string>
    <string name="add_user">添加用户</string>
    <string name="modify_user">修改用户</string>
    <string name="area_list">区域列表</string>
    <string name="add_area">添加区域</string>
    <string name="modify_area">修改区域</string>
    <string name="controller_list">控制器列表</string>
    <string name="modify_controller">修改控制器</string>
    <string name="sense_list">感应器列表</string>
    <string name="senselog_list">感应器日志列表</string>
    <string name="add_sense">添加感应器</string>
    <string name="modify_sense">修改感应器</string>
    <string name="device_list">家电列表</string>
    <string name="add_device">添加家电</string>
    <string name="modify_device">修改家电</string>
    <string name="camera_list">摄像头列表</string>
    <string name="add_camera">添加摄像头</string>
    <string name="modify_camera">修改摄像头</string>
    <string name="cmd_list">指令列表</string>
    <string name="add_cmd">添加指令</string>
    <string name="add_cmd_cmd">指　　令：</string>
    <string name="add_cmd_mode">智能模式：</string>
    <string name="modify_cmd">修改指令</string>
    <string name="cmd_name">指令名称：</string>
    <string name="voice_name">指令文本：</string>
    <string name="ctrl_name">控  制  器：</string>
    <string name="cmd_code">指令代码：</string>
    <string name="cmd_para">控制参数：</string>
    <string name="Infrared_code">红  外  码：</string>
    <string name="location">定位管理</string>
    <string name="location_distance">定位距离：</string>
    <string name="exe_mode">执行模式：</string>
    <string name="position_name">家的位置：</string>
    <string name="on_location">开启定位</string>
    <string name="camera_ip">地　址：</string>
    <string name="camera_port">端　口：</string>
    <string name="camera_uid">编　号：</string>
    <string name="camera_user">账　号：</string>
    <string name="camera_pass">密　码：</string>
    <string name="area">区　域：</string>
    <string name="mode_cmd_list">智能模式指令列表</string>
    <string name="add_mode_cmd">添加智能指令</string>
    <string name="modify_mode_cmd">修改智能指令</string>
    <string name="mode_list">智能模式列表</string>
    <string name="add_mode">添加智能模式</string>
    <string name="modify_mode">修改智能模式</string>
    <string name="choose_device_type">选择类型：</string>
    <string name="choose_area">选择区域：</string>
    <string name="choose_device">选择设备：</string>
    <string name="choose_cmd">选择指令：</string>
    <string name="name_tv">名　称：</string>

    <string-array name="usertype_name">
        <item>普通</item>
        <item>系统</item>
    </string-array>

    <string name="btn_add">添　加</string>
    <string name="btn_test">测　试</string>
    <string name="btn_study">学　习</string>
    <string name="btn_modify">修　改</string>
    <string name="control_switch">电源</string>
    <string name="control_ac">空调</string>
    <string name="control_hdplay">高清播放器</string>
    <string name="control_hdplay_open_close">OPEN\/\nCLOSE</string>
    <string name="control_tv">电视</string>
    <string name="control_switch_pause">暂停</string>
    <string name="control_tv_power">POWER</string>
    <string name="control_tv_vol">VOL</string>
    <string name="control_tv_tvav">TV\/AV</string>
    <string name="control_fans">风扇</string>
    <string name="control_fans_power">开\/关</string>
    <string name="control_fans_time">定时</string>
    <string name="control_fans_wind_type">风类</string>
    <string name="control_fans_shift">换挡</string>
    <string name="control_fans_sh">摇头</string>
    <string name="control_ac_time">定时</string>
    <string name="control_ac_wind_direction">风向</string>
    <string name="control_ac_temperature">温度</string>
    <string name="control_ac_air_out">通风</string>
    <string name="control_ac_heating">制热</string>
    <string name="control_ac_witch">开/关</string>
    <string name="control_user_defined">自定义</string>
    <string name="searching_tip">正在搜索，请稍候...</string>
    <string name="videoing">录像中...</string>
    <string name="connecting">正在连接...</string>
    <string name="main_show_back">再按一次，退出程序！</string>
    <string name="exit_alert">确认退出吗 ?</string>
    <string name="exit">退出</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="ptz_default_vedio_params">视频参数恢复默认值</string>
    <string name="p2p_relay_mode_time_out">转发模式观看,剩余时间:</string>
    <string name="str_second">秒</string>
    <string name="alerm_motion_alarm">移动侦测报警</string>
    <string name="alerm_gpio_alarm">IO联动报警</string>
    <string name="p2p_view_time_out">已到观看时间</string>
    <string name="pppp_status_unknown">未知状态</string>
    <string name="pppp_status_online">在线</string>
    <string name="pppp_status_disconnect">断线</string>
    <string name="pppp_status_connect_failed">连接失败</string>
    <string name="pppp_status_invalid_id">ID号无效</string>
    <string name="pppp_dev_type_unknown">未知类型</string>
    <string name="pppp_status_connecting">正在连接</string>
    <string name="pppp_status_initialing">已连接, 正在初始化</string>
    <string name="device_not_on_line">摄像机不在线</string>
    <string name="pppp_status_connect_timeout">连接超时</string>
    <string name="exit_show">   提示：</string>
    <string name="exit_qu">删除本地文 件</string>
    <string name="exit_qu_show">取 消</string>
    <string name="exit_play_show">确认退出播放?</string>
    <string name="exit_chenxu_show">确认退出程序?</string>
    <string name="eixt_show_toast">本地录像中，请先停止再退出！</string>
    <string name="ptz_control">请按菜单键,进行云台控制</string>

</resources>