<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/manage_bg_title" >

        <com.mac.smartcontrol.widget.MarqueeText
            android:id="@+id/weather_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="西安,temp1:23℃-27℃,中雨" />
    </LinearLayout>

    <!-- 中间动态加载View -->

    <LinearLayout
        android:id="@+id/containerBody"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:measureAllChildren="true" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_bg"
        android:gravity="center"
        android:weightSum="5" >

        <LinearLayout
            android:id="@+id/menu_manage_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/menu_manage_iv_selector"
            android:gravity="center|bottom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/menu_manage"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_control_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/menu_control_iv_selector"
            android:gravity="center|bottom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/menu_control"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_text_size" />
        </LinearLayout>

        <ImageView
            android:id="@+id/menu_voice_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/menu_voice_iv_selector" />

        <LinearLayout
            android:id="@+id/menu_camera_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/menu_camera_iv_selector"
            android:gravity="center|bottom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/menu_camera"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_location_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/menu_location_iv_selector"
            android:gravity="center|bottom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/menu_location"
                android:textColor="@color/white"
                android:textSize="@dimen/menu_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>